--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diwork-business-components",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "diwork-business-components",
   "main": "./dist",
   "author": "xingychb",
@@ -54,6 +54,8 @@
     "react-transition-group": "1.2.1",
     "react-onclickoutside": "6.6.3",
     "bee-button": "1.0.2",
-    "bee-loading": "1.0.2"
+    "bee-loading": "1.0.2",
+    "bee-icon": "1.0.4",
+    "bee-select": "1.0.4"
   }
 }
