--- a/package.json
+++ b/package.json
@@ -15,47 +15,46 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-css-modules-transform": "^1.4.0",
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chalk": "2.3.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2",
-    "ora": "1.3.0",
-    "rimraf": "2.6.2",
-    "chalk": "2.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-es3ify": "0.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
-    "babel-preset-env": "1.6.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-css-modules-transform": "^1.4.0",
-    "babel-plugin-module-alias": "^1.6.0"
+    "html-webpack-plugin": "^3.2.0",
+    "ora": "1.3.0",
+    "rimraf": "2.6.2",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "bee-button": "1.0.2",
+    "bee-icon": "1.0.4",
+    "bee-select": "1.0.4",
     "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-onclickoutside": "6.6.3",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "1.2.1",
-    "react-onclickoutside": "6.6.3",
-    "bee-button": "1.0.2",
-    "bee-loading": "1.0.2",
-    "bee-icon": "1.0.4",
-    "bee-select": "1.0.4"
+    "whatwg-fetch": "2.0.3"
   }
 }
